--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,9 @@
         // Update the value every second
         setInterval(updateValue, 1000);
     </script>
+    <style>
+        h1 {color:red; font-size: 100px;}
+    </style>
 </head>
 <body>
     <h1 id="value-display">Initial Value</h1>
